--- a/src/style.css
+++ b/src/style.css
@@ -283,3 +283,33 @@ form{
 	}
 }
 /*----//end-responsive design-----*/
+
+.wrapper {
+	display: flex;
+	flex-wrap: nowrap;;
+}
+
+.nav {
+	display: flex;
+	width: 100%;
+	background: #3C67B5;
+	height: 70px;
+	align-items: center;
+}
+
+.nav-items {
+	margin: 20px 20px
+}
+.nav-items > img {
+	width:35px;
+}
+
+.searchform {
+	width: 300px;
+	height: 30px;
+	border-radius: 10px;
+	border:none;
+	margin-left:-15px;
+	padding-left:20px
+}
+
