--- a/src/style.css
+++ b/src/style.css
@@ -316,6 +316,7 @@ form{
 .main {
 	display: flex;
 	justify-content: space-between;
+	align-content: space-around;
 	margin:20px 20px;
 }
 
@@ -334,5 +335,65 @@ form{
 	top:15px;
 	left:15px;
 	font-size:18px
+}
+
+.menu {
+	margin-top:20px;
+	background-color: #f1f1f1;
+	border-left: 2px solid #3C67B5;
+	width: 200px;
+	padding: 10px;
+}
+
+.menu-item {
+	background-color: #fff;
+	margin-bottom: 10px;
+	padding:10px;
+	width: 200px;
+	font-size: 12px;
+}
+
+.menu-item a {
+	color:#3460A8
+}
+
+.dashboard {
+	position: relative;
+	top: 15px;
+	flex: 1 1 auto;
+	margin-left: 25px;
+	
+}
+
+.dashboard > h1 {
+	font-size: 20px;
+	color: #28344B;
+}
+
+.dashboard-card-holder {
+	display: flex;
+	justify-content: space-evenly;
+	margin-top: 50px;
+}
+.small-card {
+	width: 300px;
+	border-radius: 5px;
+	background-color: #A7B1CA;
+	padding: 15px;
+}
+
+.small-card .title, .num{
+	text-align: center;;
+	
+}
+.small-card .title {
+	font-size: 16px;
+	color: #000;
+}
+
+.small-card .num {
+	margin-top:10px;
+	font-size: 25px;
+	color: #fff;
 }
 
