--- a/src/style.css
+++ b/src/style.css
@@ -449,3 +449,10 @@ form{
 	cursor: pointer;
 	border-radius: 5px;
 }
+.alert {
+	padding: 10px;
+	width: 70%;
+	font-size: 15px;
+	background:#a0f684;
+	margin-top: 20px;
+}
