--- a/src/style.css
+++ b/src/style.css
@@ -525,3 +525,45 @@ textarea {
 	background-color: #3460A8;
 	color: white;
   }
+
+  .home {
+	float: left;
+}
+
+.home-cardholder {
+	display: flex;
+	align-items: center;
+	flex-wrap: wrap;
+}
+
+.home-cardholder .card {
+	border: 1px solid;
+	width: 220px;
+	height: auto;
+	margin: 10px;
+	padding: 5px;
+}
+
+.card > img {
+	width: 220px;
+    height: 100px;
+    object-fit: cover;
+}
+.card .title {
+	font-size: 14px;
+	text-align: center;
+}
+.card .description {
+	margin-top: 5px;
+	font-size: 12px;
+	height: 100px;
+	overflow: auto;
+}
+
+.card .email, .phone {
+	text-align: center;
+	margin-top: 2px;
+	font-size: 12px;
+	font-style: italic;
+	text-transform: lowercase;
+}
